styles/styles.css
@font-face {
    font-family: 'Roobert';
    src: url('fonts/Roobert.ttf') format('truetype');
}

body {
    font-family: 'Roobert', Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #e9e9e9;
    color: #333;
}

.container {
    max-width: 950px;
    margin: 20px auto;
    padding: 20px;
    background-color: #fff;
    border-radius: 14px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

h1, .h2 {
    color: #333;
    text-align: center;
}

.hr-divider {
    width: 95%;
    border: 1px solid #ccc;
    margin: 20px auto;
}

.course {
    margin-bottom: 15px;
    padding: 0;
    background-color: #fff;
}

code {
    font-family: 'Courier New', Courier, monospace;
    font-size: 15px;
}

.collapsible {
    font-family: 'Roobert';
    text-transform: uppercase;
    background-color: #fb4c4c;
    color: #fff;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: center;
    outline: none;
    font-size: 17px;
    border-radius: 2px;
}

.active, .collapsible:hover {
    background-color: #ff6666;
}

.collapsible:after {
    content: '\002B';
    color: white;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}

.active:after {
    content: "\2212";
}

.content {
    border-left: 3px solid #ff6666;
    border-right: 3px solid #ff6666;
    padding-left: 10px;
    padding-right: 10px;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
    background-color: #f3f2f2;
    position: relative;
}

.content::after {
    content: "";
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 3px;
    background-color: #ff6666;
    transition: height 0.2s ease-out;
}

.active .content::after {
    height: 0;
}

.project-link, .project-link:visited {
    color: #ff0000;
    text-align: center;
    font-size: 16px;
    text-decoration: underline;
}

.project-link:hover {
    color: #ff4545;
}

.portfolio-link, .portfolio-link:visited {
    color: #000000;
    text-transform: uppercase;
    text-align: center;
    font-size: 14px;
    text-decoration: none;
}

.portfolio-link:hover {
    color: #ff3737;
    text-decoration: underline;
}

